network-policy/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    tier: app

---

apiVersion: v1
kind: Namespace
metadata:
  name: data
  labels:
    tier: data
