network-policy/phpmyadmin-pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phpmyadmin
    tier: app
  name: phpmyadmin
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: app
    spec:
      containers:
      - image: phpmyadmin
        name: phpmyadmin
