network-policy/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
    tier: data
  name: mysql
  namespace: data
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
    tier: data

  type: ClusterIP
