network-policy/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpmyadmin
    tier: app
  name: phpmyadmin
  namespace: app
spec:
  ports:
  - name: http
    port: 8085
    protocol: TCP
    targetPort: 80
  selector:
    app: phpmyadmin
    tier: app
  # type: ClusterIP
  # externalTrafficPolicy: Local
  type: LoadBalancer
