network-policy/allowfromhome-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-phpmyadmin-ingress
  namespace: app
spec:
  podSelector: {}

  policyTypes:
  - Ingress

  ingress:
    # - {}
    - from:
      #  - ipBlock:
      #     cidr:   88.120.73.215/32
      # - ipBlock:
      #     cidr: 10.0.84.95/32
      - ipBlock:
          cidr: 51.103.6.115/32
          # cidr: 10.0.86.73/32
          # except:
          # - 172.17.1.0/24
      # ports:
      #   - protocol: TCP
      #     port: 80
      #   - protocol: TCP
      #     port: 8085
